# dir-obj-rs

./: Cargo.toml  LICENSE.txt  README.md
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
src/data/: file0-0  file0-1  file0-2
src/data/dir0-1/: file1-0
